--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <!-- Libraries Stylesheet -->
     <link href="%PUBLIC_URL%/lib/animate/animate.min.css" rel="stylesheet">
     <link href="%PUBLIC_URL%/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="%PUBLIC_URL%/css/style.css" rel="stylesheet">
@@ -54,7 +55,7 @@
     -->
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script> -->
     <script src="%PUBLIC_URL%/lib/easing/easing.min.js"></script>
     <script src="%PUBLIC_URL%/lib/owlcarousel/owl.carousel.min.js"></script>
 
@@ -64,5 +65,8 @@
 
     <!-- Template Javascript -->
     <script src="%PUBLIC_URL%js/main.js"></script>
+    <!-- Add boostrap 5 23 mai 20233 -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   </body>
 </html>
